[tool.poetry]
name = "async-bing-client"
version = "0.1.4"
description = "Async Client for Newbing."
authors = ["canxin <1969730106@qq.com>"]
readme = "README.md"
homepage = "https://github.com/canxin121/Async-Bing-Client"
packages = [{ include = "async_bing_client" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = { extras = ["socks"], version = "^3.8.5" }
certifi = "^2023.7.22"
loguru = "^0.7.0"
regex = "^2023.8.8"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
